# foria

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LANGUAGE.md  LICENSE  README.md  spec-v1.md
.github/workflows/: ci.yml
book/: README.md  build.py
book/00-introduction/: 01-what-is-forai.md  02-installation-and-cli.md  03-hello-world.md  04-mental-model.md
book/01-core-constructs/: 01-overview.md  02-func.md  03-source.md  04-flow.md  05-sink.md
book/02-types/: 01-primitives.md  02-structs.md  03-enums.md  04-scalar-types.md  05-constraints.md  06-collections.md  07-handles.md
book/03-expressions-and-operators/: 01-literals.md  02-arithmetic-and-comparison.md  03-string-interpolation.md  04-ternary.md
book/04-control-flow/: 01-if-else.md  02-case-when.md  03-loop.md  04-break.md  05-scoping-rules.md
book/05-functions-in-depth/: 01-take-emit-fail.md  02-calling-functions.md  03-error-handling.md  04-sync-blocks.md  05-nowait.md
book/06-flows-in-depth/: 01-steps-and-wiring.md  02-branch.md  03-state.md  04-on-events.md  05-port-naming.md  06-send-nowait.md
book/07-modules/: 01-use-imports.md  02-file-and-directory-modules.md  03-resolution-rules.md  04-circular-dependencies.md
book/08-documentation/: 01-docs-blocks.md  02-field-docs.md  03-forai-doc-command.md
book/09-testing/: 01-test-blocks.md  02-must-assertions.md  03-trap-failures.md  04-mock.md  05-forai-test-command.md
book/10-standard-library/: 01-overview.md  02-str.md  03-list.md  04-obj.md  05-math.md  06-json.md  07-http-client.md  08-http-server.md  09-websocket.md  10-db.md  11-file.md  12-term.md  13-exec.md  14-regex.md  15-random.md  16-crypto.md  17-hash.md  18-date.md  19-time.md  20-env.md  21-url.md  22-route.md  23-tmpl.md  24-error.md
book/11-concurrency/: 01-pipeline-model.md  02-sync-concurrent-joins.md  04-handle-sharing.md  (+1 more)
browser/: ASYNCIFY.md  build-test-modules.mjs  build.mjs  package-lock.json  package.json  test-node.mjs  tsconfig.json
crates/forai/: Cargo.toml
crates/forai-playground-wasm/: Cargo.toml
crates/forai-playground-wasm/src/: lib.rs
crates/forai-runner/: Cargo.toml
crates/forai-runner/src/: main.rs
crates/forai/fuzz/: Cargo.toml
crates/forai/fuzz/fuzz_targets/: fuzz_dep_source.rs  fuzz_formatter.rs  fuzz_lexer.rs  fuzz_parser.rs  fuzz_roundtrip.rs  fuzz_semver.rs
crates/forai/src/: ast.rs  cli.rs  codec.rs  config.rs  debug_ui.html  debugger.rs  doc.rs  ffi_manager.rs  formatter.rs  host.rs  host_native.rs  ir.rs  lexer.rs  lib.rs  loader.rs  main.rs  op_types.rs  parser.rs  runtime.rs  sema.rs  stdlib_docs.rs  tester.rs  typecheck.rs  types.rs  ui_gtk.rs  ui_gtk_backend.rs  ui_layout.rs  ui_render.rs  wasm_runner.rs
crates/forai/src/lsp/: completion.rs  diagnostics.rs  document.rs  goto_def.rs  hover.rs  line_index.rs  mod.rs  server.rs  symbols.rs
crates/forai/src/mcp/: mod.rs  protocol.rs  server.rs  tools.rs
editors/: forai.tmLanguage.json
examples/: check-all.sh
plan/: ui-wasm.md  ui.md
playground/: build.mjs  package-lock.json  package.json  tsconfig.json
todos/: 001-complete-p1-box-leak-memory-in-known-ops.md  002-pending-p1-compile-rs-duplication-and-bugs.md  002-pending-p2-compile-rs-deduplication.md  003-pending-p1-xss-tab-rendering.md  004-complete-p2-stale-compile-results.md  005-pending-p2-cache-known-ops.md  006-complete-p2-typed-worker-protocol.md  007-complete-p2-content-security-policy.md  008-pending-p2-dead-lezer-grammar-unused-deps.md  009-pending-p2-known-ops-drift-risk.md  010-pending-p3-minor-improvements.md
(+285 files in other folders)
