[package]
name = "forai-runner"
version = "0.0.2"
edition = "2024"

[features]
default = []
linux-gtk = ["forai/linux-gtk"]

[dependencies]
forai = { path = "../forai" }
forai-core = { path = "../forai-core" }
serde_json = "1"
tokio = { version = "1", features = ["rt", "time", "net", "io-util", "fs", "process", "macros", "sync"] }
flate2 = "1"
