[package]
name = "forai"
version = "0.1.0"
edition = "2024"

[dependencies]
forai-core = { path = "../forai-core" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "time", "net", "io-util", "fs", "process", "macros", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio-tungstenite = "0.24"
futures = "0.3"
tungstenite = "0.24"
crossterm = "0.28"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
bcrypt = "0.16"
rusqlite = { version = "0.31", features = ["bundled"] }
wasmtime = "29"
flate2 = "1"
lsp-server = "0.7"
lsp-types = "0.97"

[dev-dependencies]
proptest = "1.10.0"
