[package]
name = "forai-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.forai]
path = ".."

[dependencies.forai-core]
path = "../../forai-core"

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_formatter"
path = "fuzz_targets/fuzz_formatter.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_lexer"
path = "fuzz_targets/fuzz_lexer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_roundtrip"
path = "fuzz_targets/fuzz_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_semver"
path = "fuzz_targets/fuzz_semver.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_dep_source"
path = "fuzz_targets/fuzz_dep_source.rs"
test = false
doc = false
bench = false
